---
source: query_plan/tests/execution.rs
expression: operation_plan
---
OperationPlan
    fields:
        post(by 0)
            title
            user(by 1)
                name
                email
                website(by 2)

    selections:
        Resolver(2):

        Resolver(1):
                name
                email

        Resolver(0):
                title
